# ArvoreGen

./: .gitmodules  CMakeLists.txt  Estrutura.md  PlanoDesenvolvimento.md  README.md  imgui.ini  s1_criaBuildDir.bat  s2_build.bat  s3_rodaDebug.bat  s3_rodaRelease.bat  todo.txt
Scripts/: run.bat
src/: App.cpp  App.h
src/GUI/: GUI.cpp  GUI.h  painelControles.cpp  painelVisualizacao.cpp
src/GUI/Theme/: style.cpp  style.h
src/backend/: ArvoreGenealogica.cpp  ArvoreGenealogica.h  Pessoa.cpp  Pessoa.h
src/core/: App.cpp  App.h  Run.cpp  main.cpp
src/core/Window/: Window.cpp  Window.h
src/gui/: GuiLayer.cpp  GuiLayer.h
src/gui/arvore/: ArvoreRender.cpp  ArvoreRender.h  Node.h
src/gui/janelas/: JanelaControles.cpp  JanelaControles.h  JanelaVisualiza.cpp  JanelaVisualiza.h
src/gui/theme/: StyleManager.cpp  StyleManager.h  colors.h  font.h
